force-app/main/default/objects/Burndown_Item__c/Burndown_Item__c.object-meta.xml
<CustomObject>
    <label>Sprint Snapshot</label>
    <nameField>
        <displayFormat>BI - {0000000}</displayFormat>
        <label>Burndown Item  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>