force-app/main/default/objects/Burndown_Item__c/fields/Actual_Velocity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Velocity__c</fullName>
    <inlineHelpText>Sprint Actual Velocity on a particular date on which Sprint Snapshot Batch is executed</inlineHelpText>
    <label>Actual Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>