force-app/main/default/objects/Burndown_Item__c/fields/CustomField1__c.field-meta.xml
<CustomField>
    <fullName>CustomField1__c</fullName>
    <label>Custom Snapshot Planned Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>