force-app/main/default/objects/Burndown_Item__c/fields/CustomField2__c.field-meta.xml
<CustomField>
    <fullName>CustomField2__c</fullName>
    <label>Custom Snapshot Actual Velocity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>