force-app/main/default/objects/Burndown_Item__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>