force-app/main/default/objects/Burndown_Item__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipName>Burndown_Items</relationshipName>
    <type>Lookup</type>
</CustomField>